# text-hunter

./: .gitignore  AGENTS.md  CHANGELOG.md  DESKTOP-IMPLEMENTATION.md  DESKTOP-README.md  DEVELOPMENT.md  README.md  launch.ps1  package-lock.json  package.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: scaffold.agent.md
.github/workflows/: build.yml  build_upload_artifacts.yml  release.yml
backend/: .gitignore  README.md  pyproject.toml
backend/tests/: test_excel.py  test_regex_engine.py
backend/texthunter/: __init__.py  __main__.py  excel_generator.py  license.py  main.py  models.py  regex_engine.py  routes.py
backend/texthunter/api/: routes.py  schemas.py
backend/texthunter/config/: __init__.py  settings.py
backend/texthunter/core/: __init__.py  excel.py  regex.py
frontend/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/docs/: README.md  how-to-use.md  index.md  overview.md  use-cases.md
frontend/docs/.vitepress/: config.js  config.mjs
frontend/scripts/: copy-docs.js
frontend/src/: App.vue  style.css
frontend/src/__mocks__/@tauri-apps/: plugin-http.ts
frontend/src/__tests__/: RegexConfig.test.ts  api.test.ts  client.test.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: FileList.vue  FileUpload.vue  LicenseCheck.vue  RegexConfig.vue  ResultsTable.vue
frontend/src/services/: api.js  api.ts  db.ts  license.ts
frontend/src/types/: api.ts
frontend/src/workers/: pdf.worker.js
products/text-hunter/docs/: README.md  index.md  package.json
products/text-hunter/docs/.vitepress/: config.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
