[project]
name = "texthunter"
version = "0.3"
description = "P&ID Text Extractor - Backend API for regex matching and Excel generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "grex>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-openpyxl>=3.1.5.20250919",
    "pandas-stubs>=2.3.3.260113",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "I", "Q", "D"]
extend-exclude = [".venv"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
[tool.ruff.lint]
