[project]
name = "texthunter"
version = "0.5"
description = "Text Extractor - Backend API for regex matching and Excel generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "grex>=1.0.1",
]

[project.scripts]
texthunter = "texthunter.main:run_server"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-openpyxl>=3.1.5.20250919",
    "pandas-stubs>=2.3.3.260113",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-exclude = [".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "B", "I", "Q", "D"]
ignore = ["C901"]
